@@ -1,9 +1,8 @@
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 
 import java.io.IOException;
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -22,19 +21,33 @@ public abstract class TaskManagerTest<T extends TaskManager> {
     @BeforeEach
     void setUp() throws IOException {
 
-        task1 = new Task("Task1 title", "Task1 description");
-        task2 = new Task("Task2 title", "Task2 description");
+        task1 = new Task("Task1 title", "Task1 Description", TypesOfTask.TASK, Task.Status.NEW,
+                Duration.ofDays(15), LocalDateTime.of(2026, 1, 1, 10, 0));
+        task2 = new Task( "Task2 title", "Task2 Description", TypesOfTask.TASK, Task.Status.NEW,
+                Duration.ofDays(10), LocalDateTime.of(2025, 12, 25, 10, 0));
 
-        epic = new Epic("Epic title", "Epic description");
+        epic = new Epic( "Epic title", "Epic description");
 
-        subtask1 = new Subtask("Subtask1 title", "Subtask1 description", Task.Status.NEW, epic.getIdTask());
-        subtask2 = new Subtask( "Subtask2 title", "Subtask2 description",Task.Status.NEW, epic.getIdTask());
-
+        subtask1 = new Subtask(
+                                "Subtask1 title",
+                                "Subtask1 description",
+                TypesOfTask.SUBTASK,
+                Task.Status.NEW,
+                Duration.ofDays(30),
+                LocalDateTime.of(2025, 12, 25,12,35), epic.getIdTask());
+        subtask2 = new Subtask(
+                                "Subtask2 title",
+                                "Subtask2 description",
+                TypesOfTask.SUBTASK,
+                Task.Status.NEW,
+                Duration.ofDays(20),
+                LocalDateTime.of(2026, 1, 15,14,0), epic.getIdTask());
     }
-    @AfterEach
-    void tearDown() {
-        taskManager.removeAllTasks();
-    }
+//    @AfterEach
+//    void tearDown() {
+//        taskManager.removeAllTypesOfTasks();
+//    }
+
 
     @Test
     void shouldCreateAndRetrieveTask() {
@@ -44,7 +57,7 @@ public abstract class TaskManagerTest<T extends TaskManager> {
 
     @Test
     void addNewTask() {
-        Task task = new Task("Test Task", "Test add NewTask description", Task.Status.NEW);
+        Task task = new Task("Test Task", "Test add NewTask description", Task.Status.NEW, TypesOfTask.TASK);
         taskManager.createTask(task);
         final int taskId = task.getIdTask();
         final Task savedTask = taskManager.getTaskById(taskId);
@@ -56,7 +69,7 @@ public abstract class TaskManagerTest<T extends TaskManager> {
 
         assertNotNull(tasks, "Задачи не возвращаются.");
         assertEquals(1, tasks.size(), "Неверное количество задач");
-        assertEquals(task, tasks.get(0), "Задачи не совпадают.");
+        assertEquals(task, tasks.getFirst(), "Задачи не совпадают.");
     }
 
     @Test
@@ -69,11 +82,18 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         assertTrue(taskManager.getListOfAllTasks().contains(epic), "Эпик не найден в списке всех задач");
         assertTrue(taskManager.getListOfAllTasks().contains(subtask1), "Подзадача 1 не найдена в списке всех задач");
 
+        assertTrue(taskManager.getTaskList().contains(task1), "Задача 1 не найдена в списке всех задач");
+        assertTrue(taskManager.getEpicList().contains(epic), "Эпик не найден в списке всех задач");
+        assertTrue(taskManager.getSubtaskList().contains(subtask1), "Подзадача 1 не найдена в списке всех задач");
+
         taskManager.removeTaskById(task1.getIdTask());
         assertNull(taskManager.getTaskById(task1.getIdTask()));
 
-        taskManager.removeTaskById(epic.getIdTask());
-        assertNull(epic.getSubtaskSet());
+        taskManager.removeEpicById(epic.getIdTask());
+        assertNull(taskManager.getEpicById(epic.getIdTask()));
+
+
+        assertNull(taskManager.getSubtaskById(subtask1.getIdTask()), "Подзадача должна быть удалена вместе с эпиком");
 
         List<Task> allTasks = taskManager.getListOfAllTasks();
         assertEquals(allTasks, taskManager.getListOfAllTasks(), "Списки всех задач не совпадают");
@@ -91,8 +111,8 @@ public abstract class TaskManagerTest<T extends TaskManager> {
 
         List<Epic> retrievedEpic = taskManager.getEpicList();
         assertEquals(1, retrievedEpic.size(), "Эпиков должно быть 1");
-        assertEquals(retrievedEpic.get(0), taskManager.getTaskById(subtask2.getEpicIdTask()), "Эпик не совпадает с сабтаском 1");
-        assertEquals(retrievedEpic.get(0), taskManager.getTaskById(subtask2.getEpicIdTask()), "Эпик не совпадает с сабтаском 2");
+        assertEquals(retrievedEpic.getFirst(), taskManager.getEpicById(subtask2.getEpicIdTask()), "Эпик не совпадает с сабтаском 1");
+        assertEquals(retrievedEpic.getFirst(), taskManager.getEpicById(subtask2.getEpicIdTask()), "Эпик не совпадает с сабтаском 2");
     }
 
     @Test
@@ -112,7 +132,7 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         taskManager.createSubtask(subtask2);
 
         taskManager.updateSubtask(new Subtask(subtask1.getIdTask(), "new title Subtask1",  "new description Subtask1", Task.Status.IN_PROGRESS, subtask1.getEpicIdTask()), subtask1.getIdTask());
-        assertEquals(Task.Status.IN_PROGRESS, taskManager.getTaskById(epic.getIdTask()).getStatus());
+        assertEquals(Task.Status.IN_PROGRESS, taskManager.getEpicById(epic.getIdTask()).getStatus());
     }
 
     @Test
@@ -145,8 +165,8 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         taskManager.createSubtask(subtask1);
         taskManager.createSubtask(subtask2);
 
-        taskManager.removeTaskById(subtask1.getIdTask());
-        taskManager.removeTaskById(subtask2.getIdTask());
+        taskManager.removeSubtaskById(subtask1.getIdTask());
+        taskManager.removeSubtaskById(subtask2.getIdTask());
 
         assertEquals(Task.Status.NEW,epic.getStatus(), "Статус эпика должен быть NEW, когда список подзадач пуст.");
 
@@ -205,11 +225,11 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         assertEquals(2, subtaskList.size(), "Должно быть 2 сабтаска");
 
 
-        taskManager.removeTaskById(subtask1.getIdTask());
+        taskManager.removeSubtaskById(subtask1.getIdTask());
         subtaskList = taskManager.getSubtaskList();
         assertEquals(1, subtaskList.size(), "Должен остаться 1 сабтаск после удаления одного");
 
-        taskManager.removeAllTasks();
+        taskManager.removeAllTypesOfTasks();
         subtaskList = taskManager.getSubtaskList();
         assertEquals(0, subtaskList.size(), "Список сабтасков должен быть пуст после удаления всех задач");
     }
@@ -224,10 +244,11 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         assertEquals(2, subtasksOfEpic.size(), "Должно быть 2 сабтаска для данного эпика");
 
         Epic anotherEpic = new Epic("Another Epic", "Another Epic description");
+        taskManager.createEpic(anotherEpic);
         subtasksOfEpic = taskManager.getSubtasksOfEpic(anotherEpic.getIdTask());
         assertEquals(0, subtasksOfEpic.size(), "Список сабтасков для другого эпика должен быть пуст");
 
-        taskManager.removeAllTasks();
+        taskManager.removeAllTypesOfTasks();
         subtasksOfEpic = taskManager.getSubtasksOfEpic(epic.getIdTask());
         assertEquals(0, subtasksOfEpic.size(), "Список сабтасков для данного эпика должен быть пуст после удаления всех задач");
     }
@@ -241,18 +262,20 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         taskManager.createTask(task1);
         taskManager.createTask(task2);
 
-        Subtask updatetedSubtask = new Subtask("update Subtask1", "update description subtask1", Task.Status.IN_PROGRESS, epic.getIdTask());
+        Subtask updatetedSubtask = new Subtask("update Subtask1", "update description subtask1",
+                Task.Status.IN_PROGRESS, epic.getIdTask());
         taskManager.updateSubtask(updatetedSubtask, subtask1.getIdTask());
 
-        assertEquals(updatetedSubtask, taskManager.getTaskById(subtask1.getIdTask()));
+        assertEquals(updatetedSubtask, taskManager.getSubtaskById(subtask1.getIdTask()));
 
-        Subtask updatedSubtask2 = new Subtask("update Subtask2", "update description subtask2", Task.Status.DONE, epic.getIdTask());
+        Subtask updatedSubtask2 = new Subtask("update Subtask2", "update description subtask2",
+                Task.Status.DONE, epic.getIdTask());
         taskManager.updateSubtask(updatedSubtask2,subtask1.getIdTask());
-        assertEquals(updatedSubtask2, taskManager.getTaskById(subtask1.getIdTask()));
+        assertEquals(updatedSubtask2, taskManager.getSubtaskById(subtask1.getIdTask()));
 
         Epic updatedEpic = new Epic("updated Epic", "updated description epic");
         taskManager.updateEpic(updatedEpic, epic.getIdTask());
-        assertEquals(updatedEpic, taskManager.getTaskById(epic.getIdTask()));
+        assertEquals(updatedEpic, taskManager.getEpicById(epic.getIdTask()));
 
         Task updatedTask1 = new Task("updated Task1", "updated description task1");
         taskManager.updateTask(updatedTask1, task1.getIdTask());
@@ -272,13 +295,13 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         taskManager.removeTaskById(task1.getIdTask());
         assertNull(taskManager.getTaskById(task1.getIdTask()), "Задача 1 должна быть удалена");
 
-        taskManager.removeTaskById(subtask1.getIdTask());
-        assertNull(taskManager.getTaskById(subtask1.getIdTask()), "Подзадача 1 должна быть удалена");
+        taskManager.removeSubtaskById(subtask1.getIdTask());
+        assertNull(taskManager.getSubtaskById(subtask1.getIdTask()), "Подзадача 1 должна быть удалена");
 
-        taskManager.removeTaskById(epic.getIdTask());
-        assertNull(taskManager.getTaskById(epic.getIdTask()), "Эпик) должен быть удален");
-        assertNull(taskManager.getTaskById(subtask1.getIdTask()), "Подзадача 1 должна быть удалена вместе с эпиком");
-        assertNull(taskManager.getTaskById(subtask2.getIdTask()), "Подзадача 2 должна быть удалена вместе с эпиком");
+        taskManager.removeEpicById(epic.getIdTask());
+        assertNull(taskManager.getEpicById(epic.getIdTask()), "Эпик) должен быть удален");
+        assertNull(taskManager.getSubtaskById(subtask1.getIdTask()), "Подзадача 1 должна быть удалена вместе с эпиком");
+        assertNull(taskManager.getSubtaskById(subtask2.getIdTask()), "Подзадача 2 должна быть удалена вместе с эпиком");
     }
     @Test
     void shouldDeleteHistoryWhenDeleteTaskById() {
@@ -289,18 +312,18 @@ public abstract class TaskManagerTest<T extends TaskManager> {
         taskManager.createTask(task2);
 
         taskManager.getTaskById(task1.getIdTask());
-        taskManager.getTaskById(subtask1.getIdTask());
-        taskManager.getTaskById(epic.getIdTask());
+        taskManager.getSubtaskById(subtask1.getIdTask());
+        taskManager.getEpicById(epic.getIdTask());
 
         assertEquals(3, taskManager.getHistory().size(), "В истории должно быть 3 задачи");
 
         taskManager.removeTaskById(task1.getIdTask());
         assertEquals(2, taskManager.getHistory().size(), "В истории должно быть 2 задачи после удаления задачи 1");
 
-        taskManager.removeTaskById(subtask1.getIdTask());
+        taskManager.removeSubtaskById(subtask1.getIdTask());
         assertEquals(1, taskManager.getHistory().size(), "В истории должна быть 1 задача после удаления подзадачи 1");
 
-        taskManager.removeTaskById(epic.getIdTask());
+        taskManager.removeEpicById(epic.getIdTask());
         assertEquals(0, taskManager.getHistory().size(), "История должна быть пустой после удаления эпика");
     }
 }
